--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/assignment1.css">
+    <title>Assignment1</title>
 </head>
-<body>
+<body class="azeret-mono-normal">
+      <header>
+        <nav>
+        <h3 class="nav-title">Awlad.H</h3>
+
+        <a href=""><button class="btn-primary">Download Resume </button></a>
+        </nav>
+        <div class="bg">
+        <div class="banner">
+            <img class="group" src="assets/Group.png" alt="">
+            <div class="banner-content c">
+                <h3 class="banner-title">"In the near future, I hope to become a Developer."</h3>
+                <p class="banner-description">i'm pursuing my bsc in CSE from Stamford University Bnagladesh. currently i'm in 2nd year. and i want to become a web devloper</p>
+                <button class="btn">Contact With Me</button>
+            </div>
+            </div>
+        </div>
+      </header>
     
+
+      <main>
+
+      </main>
+
+
+      <footer>
+
+      </footer>
 </body>
 </html>
