--- a/index.html
+++ b/index.html
@@ -61,7 +61,21 @@
                 </div>
                 <a href=""><img class="image" src="assets/Group 4.png" alt=""></a>
             </div>
+
+
+            
         </section>
+        <div class="inspiration c">
+            <div class="i-content">
+                <h4 class="title">My Inspiration</h4>
+                <P class="t-description">My inspiration is Jankar mahbub. By watching his videos i was inspired to learn web devlopment</P>
+
+
+            </div>
+            <div class="v">
+                <iframe width="1140" height="614" src="https://www.youtube.com/embed/CLUL2eO9o9w?si=MjyDiN70R9FHGcOF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
 
       </main>
 
