--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
                 <iframe width="1140" height="614" src="https://www.youtube.com/embed/CLUL2eO9o9w?si=MjyDiN70R9FHGcOF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
+        <section class="target c">
+            <div class="my">
+                <h4 class="title">My Current target</h4>
+                <p class="t-description">my current target is to learn html css and java script</p>
+            </div>
+            <div class="current">
+                <div class="card1">
+                    <img src="assets/html.png" alt="">
+                    <h5 class="sub">HTML</h5>
+                    <p>HTML full meaning is hyper Text Markup Language.</p>
+                    <a class="l" href="">learn more</a>
+                </div>
+                <div class="card2">
+                    <img src="assets/css.png" alt="">
+                    <h5 class="sub">CSS</h5>
+                    <p>CSS is used for styling in html</p>
+                    <a class="l" href="">learn more</a>
+                </div>
+                <div class="card3">
+                    <img src="assets/js.png" alt="">
+                    <h5 class="sub">JavaScript</h5>
+                    <p>JavaScript is used for giving logics in website</p>
+                    <a class="l" href="">learn more</a>
+                </div>
+            </div>
+
+        </section>
+        <section class="end">
+            <div class="s-content">
+            <h4 class="support">I need Support</h4>
+            <p class="s-description">If you need any support just contact with me.</p>
+            </div>
+            <div class="input">
+                <input class="ii" type="text" placeholder="Suggest me any Feedback for me">
+                <input class="ss" type="submit">
+            </div>
+            
+        </section>
 
       </main>
 
