--- a/index.html
+++ b/index.html
@@ -118,7 +118,14 @@
       </main>
 
 
-      <footer>
+      <footer class="e">
+
+        <h5 class="commitment">An Open Commitment  by Awlad Hossain</h5>
+        <div class="ft">
+            <img class="icon" src="assets/facebook.png" alt="">
+            <img class="icon" src="assets/github.png" alt="">
+            <img class="icon" src="assets/linkedin-icon 1.png" alt="">
+        </div>
 
       </footer>
 </body>
